--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Trouver Position"
+        android:text="Find Position"
         android:textAlignment="center"
         android:textSize="34sp" />
 
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text" />
+        android:hint="Enter the phone number"
+        android:inputType="phone" />
 
     <Button
         android:id="@+id/btnEnvID"
@@ -29,6 +30,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="Envoyer"/>
+        android:text=" Send SMS" />
 
 </LinearLayout>
